improved pagebook